<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tv_num01"
        android:layout_width="314dp"
        android:layout_height="46dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/label_Number1"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_num02"
        android:layout_width="304dp"
        android:layout_height="53dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/label_Number2"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_num01" />

    <EditText
        android:id="@+id/edt_num01"
        android:layout_width="306dp"
        android:layout_height="72dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:hint="@string/_23"
        android:inputType="textPersonName"
        android:text="@string/edt_Number1"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.589"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_num01"
        android:autofillHints="" />

    <EditText
        android:id="@+id/edt_num02"
        android:layout_width="306dp"
        android:layout_height="78dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:hint="@string/_12"
        android:inputType="textPersonName"
        android:text="@string/edt_Number2"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_num02"
        android:autofillHints="" />

    <Button
        android:id="@+id/btn_Plus"
        android:layout_width="136dp"
        android:layout_height="116dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="64dp"
        android:backgroundTint="@color/btnPlus"
        android:onClick="buttonClick"
        android:text="@string/plus"
        android:textColor="#D50000"
        android:textSize="34sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_num02"
        tools:ignore="TextContrastCheck,TextContrastCheck" />

    <Button
        android:id="@+id/btn_Minus"
        android:layout_width="136dp"
        android:layout_height="116dp"
        android:layout_marginEnd="52dp"
        android:backgroundTint="@color/btnMinus"
        android:onClick="buttonClick"
        android:text="@string/minus"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/btn_Plus"
        app:layout_constraintTop_toTopOf="@+id/btn_Plus" />

    <Button
        android:id="@+id/btn_Multiply"
        android:layout_width="136dp"
        android:layout_height="116dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:backgroundTint="@color/btnMultiply"
        android:onClick="buttonClick"
        android:text="@string/multiply"
        android:textSize="34sp"
        app:layout_constraintEnd_toStartOf="@+id/btn_Divide"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_Plus" />

    <Button
        android:id="@+id/btn_Divide"
        android:layout_width="136dp"
        android:layout_height="116dp"
        android:layout_marginEnd="52dp"
        android:backgroundTint="@color/btnDivide"
        android:onClick="buttonClick"
        android:text="@string/divide"
        android:textColor="#D50000"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btn_Multiply" />
</androidx.constraintlayout.widget.ConstraintLayout>